--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <version>2.9.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
