--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.1.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
