--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,25 @@
             <version>5.1.4.RELEASE</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.15.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator-cdi</artifactId>
+            <version>6.0.15.Final</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
