--- a/src/test/resources/web-utils.yml
+++ b/src/test/resources/web-utils.yml
@@ -10,7 +10,7 @@ spring:
     data:
       enabled: true
       # Jpa Entities Package
-      entities-package: com.grayraccoon.webutils
+      entities-package: com.grayraccoon.webutils.config.beans.entities
 
       # Postgres DataSource
       datasource:
@@ -19,8 +19,38 @@ spring:
         password: sa
         driver-class-name: org.h2.Driver
 
+    security:
+      oauth2-server:
+        enabled: true
+        signing-key: 8B9kTV0FfUwa76R #https://www.random.org/strings/ 15 length
+        security-realm: Web-Utils powered Backend
+      oauth2-resource:
+        enabled: true
+        local-resource-id: test-resource-id
+        secured-matchers: >
+          /**/authenticated/**,
+          /**/secured/**
+        remote-token-services:
+          enabled: false
+          client-id: test-client-id
+          client-secret: test-client-secret
+          check-token-url: http://external.oauth2server.com/oauth/check_token
+
+
   jpa:
     database: default
     hibernate.ddl-auto: validate
-    properties.hibernate.jdbc.lob.non_contextual_creation: true
+    properties.hibernate:
+      jdbc.lob.non_contextual_creation: true
+
+      # Don't use this one on real project, only unit tests
+      enable_lazy_load_no_trans: true
+
+
+spring.flyway:
+  url: ${spring.web-utils.data.datasource.jdbc-url}
+  user: ${spring.web-utils.data.datasource.username}
+  password: ${spring.web-utils.data.datasource.password}
+  baseline-on-migrate: true
+  locations: classpath:db/migration,classpath:db/test
 
