--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
         <validation-api-version>2.0.1.Final</validation-api-version>
         <javax.el-version>3.0.1-b11</javax.el-version>
 
+
+        <jaxb-api-version>2.4.0-b180830.0359</jaxb-api-version>
+        <javax-activation-version>1.1.1</javax-activation-version>
+        <jaxb-runtime-version>2.4.0-b180830.0438</jaxb-runtime-version>
+
         <spring.version>5.1.8.RELEASE</spring.version>
     </properties>
 
@@ -146,6 +151,23 @@
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
             <version>${javax.el-version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>${javax-activation-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb-runtime-version}</version>
         </dependency>
 
 
