--- a/src/test/resources/web-utils.yml
+++ b/src/test/resources/web-utils.yml
@@ -11,6 +11,7 @@ spring:
       enabled: true
       # Jpa Entities Package
       entities-package: com.grayraccoon.webutils.config.beans.entities
+      persistence-unit: test-utils
 
       # Postgres DataSource
       datasource:
