Added Test Oauth2 Server to WebUtilsTests, to test services without its own Oauth2 Server. now WebUtilsTest has coverage check + small improvements

--- a/Web-Utils/src/test/resources/web-utils.yml
+++ b/Web-Utils/src/test/resources/web-utils.yml
@@ -1,4 +1,6 @@
 
+server.port: 26142
+
 spring:
   # Web-Utils Configuration
   web-utils:
@@ -36,7 +38,7 @@ spring:
           enabled: false
           client-id: test-client-id
           client-secret: test-client-secret
-          check-token-url: http://external.oauth2server.com/oauth/check_token
+          check-token-url: http://localhost:26142/oauth/check_token
 
 
   jpa:
