--- a/Web-Utils/pom.xml
+++ b/Web-Utils/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.grayraccoon</groupId>
     <artifactId>web-utils</artifactId>
-    <version>0.2.2-SNAPSHOT</version>
+    <version>0.2.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -24,6 +24,8 @@
         <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
         <spring-security-oauth2-version>2.3.5.RELEASE</spring-security-oauth2-version>
         <spring-security-jwt-version>1.0.10.RELEASE</spring-security-jwt-version>
+
+        <web-utils-test-version>0.2.3-SNAPSHOT</web-utils-test-version>
 
         <commons-lang3-version>3.9</commons-lang3-version>
         <commons-io-version>2.6</commons-io-version>
@@ -171,7 +173,7 @@
         <dependency>
             <groupId>com.grayraccoon</groupId>
             <artifactId>web-utils-test</artifactId>
-            <version>${project.version}</version>
+            <version>${web-utils-test-version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -271,7 +273,7 @@
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.6</minimum>
+                                            <minimum>0.7</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
@@ -290,13 +292,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
