--- a/Web-Utils-Test/pom.xml
+++ b/Web-Utils-Test/pom.xml
@@ -23,6 +23,9 @@
 
         <lombok-version>1.18.6</lombok-version>
 
+        <jaxb-api-version>2.4.0-b180830.0359</jaxb-api-version>
+        <javax-activation-version>1.1.1</javax-activation-version>
+        <jaxb-runtime-version>2.4.0-b180830.0438</jaxb-runtime-version>
     </properties>
 
 
@@ -65,6 +68,23 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>${javax-activation-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb-runtime-version}</version>
         </dependency>
 
     </dependencies>
