Updated WebUtils bootstrap.yml template.

--- a/Web-Utils/src/main/resources/bootstrap.template.yml
+++ b/Web-Utils/src/main/resources/bootstrap.template.yml
@@ -1,5 +1,5 @@
 ## default
-spring.profiles.include: standalone
+eureka.client.enabled: false
 ---
 ## Copy this standalone section on your app bootstrap.yml
 spring.profiles: standalone
@@ -24,16 +24,16 @@ spring:
         multiplier: 1.4
 ---
 spring.profiles: base
-## spring.application.name: TODO: define inside app
+## spring.application.name: TODO: define inside your app
 logging:
   file: ${java.io.tmpdir}/logs/${spring.application.name}.log
 ---
-spring.profiles: local,standalone,heroku,aws,dev
+spring.profiles: local,standalone,localdev,dockercli,swarm,heroku,aws,dev
 spring.profiles.include: base
 ---
 spring.profiles: local
 spring.profiles.main: local
-spring.profiles.include: standalone
+spring.profiles.include: cloud,cloudlogback
 ---
 spring.profiles: heroku
 spring.profiles.main: heroku
@@ -45,8 +45,17 @@ spring.profiles.include: standalone
 ---
 spring.profiles: localdev
 spring.profiles.main: localdev
-spring.profiles.include: cloud,cloudlogback
+spring.profiles.include: standalone
 ---
+spring.profiles: dockercli
+spring.profiles.main: dockercli
+spring.cloud.config.uri: http://ConfigServer:8888
+---
+spring.profiles: swarm
+spring.profiles.main: swarm
+spring.cloud.config.uri: http://tasks.ConfigServer:8888
+---
+
 spring.profiles: cloudlogback
 logging:
   config: ${spring.cloud.config.uri}/${spring.cloud.config.name}/${spring.profiles.main:base}/master/logback-spring.xml
