--- a/Web-Utils/pom.xml
+++ b/Web-Utils/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.grayraccoon</groupId>
+    <groupId>com.grayraccoon.Web-Utils</groupId>
     <artifactId>web-utils</artifactId>
     <version>0.2.4-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -171,7 +171,7 @@
 
 
         <dependency>
-            <groupId>com.grayraccoon</groupId>
+            <groupId>com.grayraccoon.Web-Utils</groupId>
             <artifactId>web-utils-test</artifactId>
             <version>${web-utils-test-version}</version>
             <scope>test</scope>
