--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.grayraccoon</groupId>
+	<groupId>com.grayraccoon.Web-Utils</groupId>
 	<artifactId>web-utils-root</artifactId>
 	<version>0.2.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
