--- a/Cloud-Svc-Parent/pom.xml
+++ b/Cloud-Svc-Parent/pom.xml
@@ -7,27 +7,35 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.grayraccoon.Web-Utils</groupId>
     <artifactId>cloud-svc-parent</artifactId>
-    <version>0.2.5-SNAPSHOT</version>
+    <version>0.2.6-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <developers>
+        <developer>
+            <id>heriberto-reyes-esparza</id>
+            <name>Heriberto Reyes Esparza</name>
+            <email>hery.chemo@gmail.com</email>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-        <spring-cloud-starter-oauth2-version>2.1.2.RELEASE</spring-cloud-starter-oauth2-version>
+        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
+        <spring-cloud-starter-oauth2-version>2.1.4.RELEASE</spring-cloud-starter-oauth2-version>
 
         <!--
-        <ancira-searchbox-domain-version>0.2.5-SNAPSHOT</ancira-searchbox-domain-version>
+        <ancira-searchbox-domain-version>0.2.6-SNAPSHOT</ancira-searchbox-domain-version>
         -->
-        <web-utils-version>0.2.5-SNAPSHOT</web-utils-version>
+        <web-utils-version>0.2.6-SNAPSHOT</web-utils-version>
 
         <commons-lang3-version>3.8.1</commons-lang3-version>
         <commons-io-version>2.6</commons-io-version>
