--- a/Web-Utils/pom.xml
+++ b/Web-Utils/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.2.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.grayraccoon.Web-Utils</groupId>
     <artifactId>web-utils</artifactId>
-    <version>0.2.5-SNAPSHOT</version>
+    <version>0.2.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -21,11 +21,11 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
         <spring-security-oauth2-version>2.3.5.RELEASE</spring-security-oauth2-version>
         <spring-security-jwt-version>1.0.10.RELEASE</spring-security-jwt-version>
 
-        <web-utils-test-version>0.2.5-SNAPSHOT</web-utils-test-version>
+        <web-utils-test-version>0.2.6-SNAPSHOT</web-utils-test-version>
 
         <commons-lang3-version>3.9</commons-lang3-version>
         <commons-io-version>2.6</commons-io-version>
@@ -103,7 +103,6 @@
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-javanica</artifactId>
-            <scope>compile</scope>
         </dependency>
 
 
@@ -198,7 +197,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-            <version>2.1.1.RELEASE</version>
+            <version>2.2.1.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
