--- a/Web-Utils/pom.xml
+++ b/Web-Utils/pom.xml
@@ -13,8 +13,16 @@
 
     <groupId>com.grayraccoon.Web-Utils</groupId>
     <artifactId>web-utils</artifactId>
-    <version>0.2.6-SNAPSHOT</version>
+    <version>0.2.7-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <developers>
+        <developer>
+            <id>heriberto-reyes-esparza</id>
+            <name>Heriberto Reyes Esparza</name>
+            <email>hery.chemo@gmail.com</email>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,7 +33,7 @@
         <spring-security-oauth2-version>2.3.6.RELEASE</spring-security-oauth2-version>
         <spring-security-jwt-version>1.0.10.RELEASE</spring-security-jwt-version>
 
-        <web-utils-test-version>0.2.6-SNAPSHOT</web-utils-test-version>
+        <web-utils-test-version>0.2.7-SNAPSHOT</web-utils-test-version>
 
         <commons-lang3-version>3.9</commons-lang3-version>
         <commons-io-version>2.6</commons-io-version>
@@ -56,6 +64,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -72,6 +81,7 @@
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>${spring-security-oauth2-version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -180,6 +190,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -232,7 +248,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <includes>
                         <include>**/*Test.java</include>
@@ -286,8 +302,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
