--- a/Web-Utils/pom.xml
+++ b/Web-Utils/pom.xml
@@ -30,28 +30,29 @@
         <java.version>1.8</java.version>
 
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-        <spring-security-oauth2-version>2.3.6.RELEASE</spring-security-oauth2-version>
-        <spring-security-jwt-version>1.0.10.RELEASE</spring-security-jwt-version>
+        <spring-security-oauth2.version>2.4.0.RELEASE</spring-security-oauth2.version>
+        <spring-security-jwt.version>1.1.0.RELEASE</spring-security-jwt.version>
+        <spring-cloud-commons.version>2.2.1.RELEASE</spring-cloud-commons.version>
 
-        <web-utils-test-version>0.2.8-SNAPSHOT</web-utils-test-version>
+        <web-utils-test.version>0.2.8-SNAPSHOT</web-utils-test.version>
 
-        <commons-lang3-version>3.9</commons-lang3-version>
-        <commons-io-version>2.6</commons-io-version>
-        <lombok-version>1.18.8</lombok-version>
-
-
-        <jackson-fasterxml-version>2.9.9</jackson-fasterxml-version>
-        <slf4j-api-version>1.7.26</slf4j-api-version>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <commons-io.version>2.6</commons-io.version>
+        <lombok.version>1.18.12</lombok.version>
 
 
-        <hibernate-validator-version>6.1.1.Final</hibernate-validator-version>
-        <validation-api-version>2.0.1.Final</validation-api-version>
-        <javax.el-version>3.0.1-b11</javax.el-version>
+        <jackson-fasterxml.version>2.10.2</jackson-fasterxml.version>
+        <slf4j-api.version>1.7.30</slf4j-api.version>
 
 
-        <jaxb-api-version>2.4.0-b180830.0359</jaxb-api-version>
-        <javax-activation-version>1.1.1</javax-activation-version>
-        <jaxb-runtime-version>2.4.0-b180830.0438</jaxb-runtime-version>
+        <hibernate-validator.version>6.1.2.Final</hibernate-validator.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <javax.el.version>3.0.1-b11</javax.el.version>
+
+
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <activation.version>1.1.1</activation.version>
+        <jaxb-runtime.version>2.3.2</jaxb-runtime.version>
     </properties>
 
 
@@ -80,33 +81,33 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2-version}</version>
+            <version>${spring-security-oauth2.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
-            <version>${spring-security-jwt-version}</version>
+            <version>${spring-security-jwt.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3-version}</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io-version}</version>
+            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok-version}</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -119,20 +120,20 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-fasterxml-version}</version>
+            <version>${jackson-fasterxml.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson-fasterxml-version}</version>
+            <version>${jackson-fasterxml.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api-version}</version>
+            <version>${slf4j-api.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -140,49 +141,49 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator-version}</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator-cdi</artifactId>
-            <version>${hibernate-validator-version}</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>${validation-api-version}</version>
+            <version>${validation-api.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.el</artifactId>
-            <version>${javax.el-version}</version>
+            <version>${javax.el.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${jaxb-api-version}</version>
+            <version>${jaxb-api.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
-            <version>${javax-activation-version}</version>
+            <version>${activation.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>${jaxb-runtime-version}</version>
+            <version>${jaxb-runtime.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.grayraccoon.Web-Utils</groupId>
             <artifactId>web-utils-test</artifactId>
-            <version>${web-utils-test-version}</version>
+            <version>${web-utils-test.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -213,7 +214,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
-            <version>2.2.1.RELEASE</version>
+            <version>${spring-cloud-commons.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -261,7 +262,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.4</version>
+                <version>0.8.5</version>
                 <executions>
                     <execution>
                         <goals>
