--- a/Web-Utils/src/test/resources/web-utils.yml
+++ b/Web-Utils/src/test/resources/web-utils.yml
@@ -26,10 +26,14 @@ spring:
     web:
       allow-all-cors: true
     security:
+      actuator:
+        enabled: true
+        security-realm: Web-Utils powered Backend
+        user: actuator_user
+        password: actuator_password
       oauth2-server:
         enabled: true
         signing-key: 8B9kTV0FfUwa76R #https://www.random.org/strings/ 15 length
-        security-realm: Web-Utils powered Backend
       oauth2-resource:
         enabled: true
         local-resource-id: test-resource-id
@@ -59,4 +63,16 @@ spring.flyway:
   password: ${spring.web-utils.data.datasource.password}
   baseline-on-migrate: true
   locations: classpath:db/migration,classpath:db/test
+
+
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+      base-path: /actuatorBasePath
+  endpoint:
+    health:
+      show-details: always
 
