--- a/Web-Utils/src/main/resources/web-utils.yml
+++ b/Web-Utils/src/main/resources/web-utils.yml
@@ -8,6 +8,18 @@ spring:
       threadNamePrefix: Async-Exec-
       scheduledTasksPoolSize: 40
       scheduledTasksPoolNamePrefix: Scheduling-
+    lang-messages:
+      enabled: true
+      defaultLocale: en
+      supportedLocales:
+        - en
+        - es
+      messageBasenames:
+        - "classpath:strings/messages"
+        - "classpath:messages/messages"
+        - "classpath:messages"
+        - "classpath:ValidationMessages"
+        - "classpath:strings/ValidationMessages"
     data:
       enabled: true
       entities-package: com.some.package
