[CU-arnhdq] Thread local by pass request for hystrix.

--- a/Web-Utils/src/test/resources/web-utils.yml
+++ b/Web-Utils/src/test/resources/web-utils.yml
@@ -37,6 +37,7 @@ spring:
         driver-class-name: org.h2.Driver
     web:
       allow-all-cors: true
+      hystrix-share-thread-local: true
     security:
       actuator:
         enabled: true
