--- a/Web-Utils/src/main/resources/web-utils.yml
+++ b/Web-Utils/src/main/resources/web-utils.yml
@@ -56,6 +56,7 @@ spring:
         maxLifetime: 1200000
     web:
       allow-all-cors: false
+      hystrix-share-thread-local: false
     security:
       actuator:
         enabled: false
